--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hola ñañita :3</p>
+    <h1>Hola</h1>
     <br>
     <button onclick="hablar(texto)">Pulsa aquí</button>
 
